argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
  type: ClusterIP
